# GPT-CodexPROJ

./: .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  SKILL.md  handoff.md  package-lock.json  package.json  todolist.md  tsconfig.base.json  tsconfig.scripts.json
.github/: pull_request_template.md
agents/: openai.yaml
references/legacy/ChatGPTCLI/.codex/skills/zhukong-orchestrator_v1.0.1/assets/gxd-subagent-shim-0.2.3/: MANIFEST.in  README.md  pyproject.toml
references/legacy/ChatGPTCLI/.codex/skills/zhukong-orchestrator_v1.0.1/assets/gxd-subagent-shim-0.2.3/gxd_subagent_shim/: __init__.py  __main__.py  backend.py  cli.py  config.py
references/legacy/ChatGPTCLI/.codex/skills/zhukong-orchestrator_v1.0.1/assets/gxd-subagent-shim-0.2.3/gxd_subagent_shim/artifacts/: __init__.py  index.py  store.py
references/legacy/ChatGPTCLI/.codex/skills/zhukong-orchestrator_v1.0.1/assets/gxd-subagent-shim-0.2.3/gxd_subagent_shim/io/: __init__.py  json_extract.py  output_extract.py  safe_write.py
references/legacy/ChatGPTCLI/.codex/skills/zhukong-orchestrator_v1.0.1/assets/gxd-subagent-shim-0.2.3/gxd_subagent_shim/postprocess/: __init__.py  compact.py
references/legacy/ChatGPTCLI/.codex/skills/zhukong-orchestrator_v1.0.1/assets/gxd-subagent-shim-0.2.3/gxd_subagent_shim/util/: __init__.py  git.py  locks.py  time.py
references/legacy/ChatGPTCLI/.codex/skills/zhukong-orchestrator_v1.0.1/assets/gxd-subagent-shim-0.2.3/gxd_subagent_shim/validation/: __init__.py  input_validation.py  output_validation.py
(+520 files in other folders)
